[project]
name = "pretrained-causal-adj"
version = "0.1.0"
description = "Pretrained Causal Adjustment Project"
authors = [
    { name = "Rickmer Schulte", email = "schulte@stat.uni-muenchen.de" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
package-mode = false

dependencies = [
    "scikit-dimension (>=0.3.4,<0.4.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "scikit-learn (>=1.5,<2.0)",
    "doubleml (>=0.9.3,<0.10.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "torch (>=2.7.0,<3.0.0)",
    "torchvision (>=0.22.0,<0.23.0)",
    "torchxrayvision (>=1.3.4,<2.0.0)",
    "causalml (>=0.15.4,<0.16.0)"
]

[project.optional-dependencies]
dev = [
    "jupyterlab"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "helpers", from = "src" },
    { include = "feature_extraction", from = "src" }
]

[tool.poetry.group.dev.dependencies]
notebook = "^7.4.2"
ipykernel = "^6.29.5"

